stop horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
 
 html{
     font-size: 62.5%;
+    overflow-x: hidden
+
 }
 
 body{
@@ -14,6 +16,7 @@ body{
     padding-left: 100px;
     padding-right: 100px;
     padding-top: 60px;
+    overflow-x: hidden
 }
 
 .wppBtn{
@@ -22,7 +25,7 @@ body{
     height: 60px;
     background: url('https://api.iconify.design/logos/whatsapp-icon.svg') no-repeat center center / contain;
     position: fixed;
-    right: 16px;
+    right: 20px;
     bottom: 16px;
 }
 
